<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/crossImgView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:padding="@dimen/value_20dp"
                android:src="@drawable/ic_cross_normal"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_centerInParent="true"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:padding="@dimen/value_10dp"
                android:src="@drawable/ic_logo_promo_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_ciudades" />


            <com.Mezda.Catastro.util.FloatLabel
                android:id="@+id/SignInUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"

                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_phone_number"
                android:inputType="text"
                android:textColorHint="@color/transparent_white"
                app:floatLabelColor="@color/map_polyline_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:background="@color/background_material_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SignInUserName" />


            <com.Mezda.Catastro.util.FloatLabel
                android:id="@+id/SignInPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="text"
                android:textColorHint="@color/transparent_white"
                app:floatLabelColor="@color/map_polyline_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <ImageView
                android:id="@+id/showPasswordImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="bottom"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:clickable="true"
                android:src="@drawable/ic_show_password"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/SignInPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/SignInPassword" />


            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:background="@color/background_material_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SignInPassword" />


            <CheckBox
                android:id="@+id/checkBoxAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentStart="false"
                android:layout_centerVertical="false"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:checked="false"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/tcTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_toRightOf="@+id/checkBoxAccept"
                android:clickable="true"
                android:maxLines="1"
                android:text="@string/tc_accept"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:visibility="invisible"
                app:layout_constraintStart_toEndOf="@+id/checkBoxAccept"
                app:layout_constraintTop_toTopOf="@+id/checkBoxAccept" />


            <TextView
                android:id="@+id/btnSignIn"
                style="@style/btnDeepSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/sign_in_string"
                android:textColor="@color/bright_foreground_material_dark"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />


            <TextView
                android:id="@+id/btnForgotPasswordTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:maxLines="2"
                android:text="@string/forget_password_string"
                android:textColor="@color/address_text_color"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

            <TextView
                android:id="@+id/btnNewUserTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:clickable="true"
                android:maxLines="2"
                android:text="@string/new_user_string"
                android:textColor="@color/greenish"
                android:textSize="@dimen/value_15sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/value_15dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@android:color/white"
                android:visibility="invisible" />


            <ImageView
                android:id="@+id/SignIn_Mun_logo"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnForgotPasswordTV" />

            <Spinner
                android:id="@+id/spinner_ciudades"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>